# Aether

./: .gitignore  Aether.opam  COPYRIGHT  README.md  dune-project  interpreter.opam  package.json  syntax_ideas.md
interpreter/: dune  object.ml  repl.ml  script.ml
interpreter/evaluator/: evaluator.ml
interpreter/lexer/: lexer.mli  token.mli
interpreter/parser/: ast.ml  parser.ml  parser.mli
lib/: ast.re  dune  lexer.re  lexer.rei  parser.ml  parser.re  repl.ml  repl.re  token.re  token.rei
lib/lexer/: lexer.ml  lexer.mli  lexer.re  lexer.rei  token.ml  token.mli  token.rei
lib/parser/: ast.ml  parser.ml  parser.mli  parser.re
lib/repl/: repl.ml  repl.re
ocaml/: dune-project
ocaml/lib/: ast.ml  dune  lexer.ml  lexer.mli  parser.ml  parser.mli  repl.ml  token.ml  token.mli
ocaml/src/lexer/: lexer.ml  lexer.mli  token.ml
ocaml/src/parser/: ast.ml  parser.ml
ocaml/src/repl/: repl.ml
ocaml/tests/: aether.ml  aether_t.ml  lexer_t.ml  parser_t.ml
reason/: Aether.opam  dune-project
reason/lib/: ast.re  dune  lexer.re  lexer.rei  parser.re  parser.rei  repl.re  token.re
reason/src/lexer/: lexer.re
reason/src/parser/: ast.re  parser.re  parser.rei
reason/src/repl/: repl.re
reason/tests/: aether.re  aether_t.re  dune  lexer_t.re  parser_t.re
src/: dune
src/lexer/: lexer.rei  token.mli  token.rei
src/lib/: dune
src/lib/lexer/: lexer.re  lexer.rei  token.re  token.rei
src/lib/parser/: ast.re  parser.re  parser.rei
src/lib/repl/: repl.re  repl.rei
src/parser/: ast.re  parser.ml
src/repl/: repl.mli
test/: dune  lexer.re  test1.re
tests/: aether.re  aether_t.ml  aether_t.re  ast_t.ml  ast_t.re  briar_t.ml  dune  interpreter.re  lexer.re  lexer_t.ml  lexer_t.re  parser_t.ml  parser_t.re
tests/interpreter/: dune  evaluator_t.ml  interpreter_t.ml  parser_t.ml
tests/scripts/: test.bris
zig/src/: main.zig
zig/src/lexer/: lexer.zig  token.zig
