(test
  (name aether_t)
  (modules aether_t)
  (libraries aether alcotest
             lexer_t
             parser_t
             ast_t))
(library
  (name lexer_t)
  (modules lexer_t)
  (libraries aether alcotest))

(library
  (name parser_t)
  (modules parser_t)
  (libraries aether alcotest core))

(library
  (name ast_t)
  (modules ast_t)
  (libraries aether alcotest))
