(test
  (name briar_t)
  (modules briar_t)
  (libraries briar alcotest
             lexer_t
             parser_t
             ast_t))
(library
  (name lexer_t)
  (modules lexer_t)
  (libraries briar alcotest))

(library
  (name parser_t)
  (modules parser_t)
  (libraries briar alcotest core))

(library
  (name ast_t)
  (modules ast_t)
  (libraries briar alcotest))
