(test
  (name interpreter_t)
  (modules interpreter_t)
  (libraries briar_i alcotest
             lexer_t
             parser_t
             ast_t))
(library
  (name lexer_t)
  (modules lexer_t)
  (libraries briar_i alcotest))

(library
  (name parser_t)
  (modules parser_t)
  (libraries briar_i alcotest core))

(library
  (name ast_t)
  (modules ast_t)
  (libraries briar_i alcotest))
