(test
  (name interpreter_t)
  (modules interpreter_t)
  (libraries alcotest
             briar_i
             lexer_t
             parser_t
             evaluator_t
             ast_t))
(library
  (name lexer_t)
  (modules lexer_t)
  (libraries briar_i alcotest))

(library
  (name parser_t)
  (modules parser_t)
  (libraries briar_i alcotest core))

(library
  (name evaluator_t)
  (modules evaluator_t)
  (libraries briar_i alcotest core))

(library
  (name ast_t)
  (modules ast_t)
  (libraries briar_i alcotest))
